# thread-bot

./: .gitignore  README.md  pyproject.toml  run.py
.github/: CODESTYLE.md  settings.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-seccurity-report.md
.github/workflows/: test-worker.yml
src/: __init__.py  app.py  check.py  config.py  utils.py
src/cogs/: dev_command.py  error_manager.py  help_command.py  invite_manager.py  misc_command.py
tests/: test_placeholder.py
